[gd_scene load_steps=3 format=3 uid="uid://b760mnaikl1il"]

[ext_resource type="Script" uid="uid://cjp31kf122hiv" path="res://src/ui/components/character_card.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.0705882, 0.0705882, 0.109804, 0.94)
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color(0.556863, 0.631373, 0.921569, 0.85)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="CharacterCard" type="Control"]
custom_minimum_size = Vector2(220, 208)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.11, 0.11, 0.17, 0.92)

[node name="BurstContainer" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BurstFrame" type="Panel" parent="BurstContainer"]
unique_name_in_owner = true
clip_children = 1
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("1")

[node name="BurstTexture" type="TextureRect" parent="BurstContainer/BurstFrame"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.95)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 3
stretch_mode = 6

[node name="QuestionLabel" type="Label" parent="BurstContainer/BurstFrame"]
unique_name_in_owner = true
visible = false
z_index = 2
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameOverlay" type="ColorRect" parent="BurstContainer/BurstFrame"]
unique_name_in_owner = true
z_index = 1
layout_mode = 0
anchor_top = 0.74
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0.62)

[node name="NameLabel" type="Label" parent="BurstContainer/BurstFrame/NameOverlay"]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true
